# rs-eth-template

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
config/: log4rs.yaml
latest-block/: Cargo.toml
latest-block/src/: lib.rs  main.rs
src/: lib.rs  main.rs
src/blocks/: blocks.rs  mod.rs
src/config/: config.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/blocks/: blocks.rs  mod.rs
utils/src/config/: config.rs
