[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = {version = "1.0.2", features = ["ws", "rustls"]}
eyre = "0.6.8"
log = "0.4.17"
log4rs = {version = "1.1.1", features = ["gzip"]}
serde_json = "1.0.93"
strum = {version = "0.24", features = ["derive"]}
tokio = "1.20.1"